# nanogpt-burn

./: .gitignore  Cargo.toml  outline.md  readme.md
scripts/: gpt.py
src/: attention.rs  feedforward.rs  gpt.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
src/data/: batcher.rs  dataset.rs  mod.rs
src/tokenizer/: mod.rs  simple.rs
