[package]
name = "nanogpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = "1.0"
derive-new = "0.6.0"

burn = {git = "https://github.com/tracel-ai/burn.git", features=["train"]}
